# aish

./: .gitignore  CLAUDE.md  Makefile  README.md  install.sh  parse_exif.py  parse_stock.py  pyproject.toml  reverse_geo.py  xkom_page.html
.claude/skills/orchestrate/: SKILL.md
.claude/skills/verify/: SKILL.md
.devcontainer/: cld-credential.sh  cld-setup.sh  devcontainer.json  init-firewall.sh
.github/workflows/: ci.yml
aish/: __init__.py  agent.py  aliases.py  approval.py  backends.py  claude_max.py  cli.py  dir_ignore.py  embeddings.py  export.py  files.py  prompt.py  pty_session.py  secrets.py  server.py  session.py  skill_import.py  skills.py  term_image.py  tool_plugins.py  tools.py  web.py
aish/fonts/: LICENSE
aish/static/: app.js  index.html  manifest.json  style.css  sw.js
scripts/: aish-preview.sh  deploy-mm.sh  deploy-web.sh  install-mm-service.sh  install-web-service.sh
tests/: conftest.py  test_agent.py  test_aliases.py  test_approval.py  test_backends.py  test_cli.py  test_dir_ignore.py  test_embeddings.py  test_export.py  test_files.py  test_frontend_js.py  test_prompt.py  test_pty.py  test_secrets.py  test_server.py  test_session.py  test_skill_import.py  test_skills.py  test_term_image.py  test_tool_plugins.py  test_tools.py  test_web.py
tests/js/: test_console_link_wrap.js  test_console_links.js  test_escape_exit.js  test_osc52_clipboard.js  test_pty_render.js  test_quick_reply_render.js  test_session_slash.js  test_term_stream_cap.js  test_youtube_shorts.js
