[project]
name = "aish"
version = "0.1.0"
description = "Local LLM agent that runs CLI commands with mandatory approval, grounded by reading man pages and --help before guessing flags"
requires-python = ">=3.11"
dependencies = [
    "ollama>=0.5",
]

[project.scripts]
aish = "aish.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aish"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
