[project]
name = "aish"
version = "0.1.0"
description = "Local LLM agent that runs CLI commands with mandatory approval, grounded by reading man pages and --help before guessing flags"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.60",
    "claude-agent-sdk>=0.2.121",
    "ddgs>=9.14.4",
    "ollama>=0.5",
    "openai>=1.60",
    "prompt-toolkit>=3.0",
    "starlette>=0.40",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
aish = "aish.cli:main"
aish-web = "aish.server:main"

[dependency-groups]
dev = [
    "httpx>=0.27",
    "pytest>=8",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aish"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
